fix double scrollbar

--- a/Tesserae/h5/assets/css/tss.basiclist.css
+++ b/Tesserae/h5/assets/css/tss.basiclist.css
@@ -14,3 +14,7 @@
     float: left;
     width: 100%;
 }
+
+.tss-basiclist > .tss-stack{
+    overflow-x: hidden;
+}
